--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 pip>=9
 setuptools>=26
 wheel>=0.29
+memoized-property==1.0.3
+scikit-learn==0.20.4
 pandas
 pytest
 coverage
@@ -9,3 +11,4 @@ black
 yapf
 python-gitlab
 twine
+mlflow
