--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ setuptools>=26
 wheel>=0.29
 memoized-property==1.0.3
 scikit-learn==0.20.4
+google-cloud-storage==1.26.0
+gcsfs==0.6.0
 pandas
 pytest
 coverage
@@ -13,3 +15,6 @@ python-gitlab
 twine
 mlflow
 imbalanced-learn
+tensorflow
+keras
+joblib
