--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ pip>=9
 setuptools>=26
 wheel>=0.29
 memoized-property==1.0.3
-scikit-learn==0.20.4
+scikit-learn>=0.22.1
 google-cloud-storage==1.26.0
 gcsfs==0.6.0
+tensorflow>=2.2
 pandas
 pytest
 coverage
@@ -15,7 +16,6 @@ python-gitlab
 twine
 mlflow
 imbalanced-learn
-tensorflow
 keras
 joblib
 streamlit
